unpackaged/main/default/objects/GIACTIdentifyResponses__c/GIACTIdentifyResponses__c.object-meta.xml
<CustomObject>
    <label>GIACT Identify Response</label>
    <nameField>
        <displayFormat>GID-{0000}</displayFormat>
        <label>GIACT Identify Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GIACT Identify Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>