unpackaged/main/default/objects/GIACTIdentifyResponses__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>