unpackaged/main/default/objects/GIACTIdentifyResponses__c/fields/ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatus__c</fullName>
    <label>Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successfully Identified</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Failed To Identify</fullName>
            </value>
            <value>
                <fullName>Automated Approval</fullName>
            </value>
            <value>
                <fullName>Need Review</fullName>
                <isActive>false</isActive>
                <label>Need Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>